web/app/themes/understrap-child/sass/theme/_child_theme.scss
// This is an empty scss file for your custom styles - Please add your super duper awesome mega design styles here
body {
    font-family: myriad-pro, sans-serif;
    font-style: normal;
    font-weight: 100;
    font-size: 1.2rem;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

@font-face {
    font-family: northwell;
    src: url(http://easit.b3kund.se/web/app/themes/understrap-child/fonts/northwell.ttf);
}

@font-face {
    font-family: playfair-display;
    src: url(http://easit.b3kund.se/web/app/themes/understrap-child/fonts/PlayfairDisplay-Regular.ttf);
}

i {
    font-family: "FontAwesome";
    font-weight: normal;
    font-style: normal;
}

.wrapper {
    padding: 0;
}
.wrap-flexbox {
    display: flex;
    /* [1] */
    justify-content: center;
    /* [2] */
    align-items: center;
    /* [3] */
}

.row {
    margin-right: 0;
    margin-left: 0;
}

.h1,h1, .h2,h2, .h3,h3, .h4,h4, .h5,h5 {
    font-family: 'Playfair Display', serif;
    font-style: normal;
    font-weight: 100;
    white-space: pre-line;
}



.myriad-header {
    .h1,h1, .h2,h2, .h3,h3, .h4,h4, .h5,h5{
        font-family: myriad-pro, sans-serif;
    }
}

ul {
    list-style-type: none;
    padding-left: 0;
}

.wpb_wrapper ul {
    list-style-type: disc;
    padding-left: 20px;
}

relatedposts li {
    margin-bottom: 50px;
}

.al-template-f6c9dc70ecfd8f90ba8598aa2401cd1a .al-form label {color: #424242}

.display {
    font-family: 'Playfair Display', serif;
    font-style: normal;
    font-weight: 100;
    line-height: auto;
}

.northwell {
    font-family: northwell;
}

.playfair-display {
    font-family: playfair-display;
}

.fontsize30 {
    font-size: 3rem;
    font-style: normal;
    font-weight: 100;
    line-height: 3rem;
}

.fontsize40 {
    font-size: 4rem;
    font-style: normal;
    font-weight: 100;
    line-height: 4rem;
}

.fontsize50 {
    font-size: 5rem;
    font-style: normal;
    font-weight: 100;
    line-height: 5rem;
}

.fontsize60 {
    font-size: 6rem;
    font-style: normal;
    font-weight: 100;
    line-height: 6rem;
}

.textbackground-light {
    color: #000;
    background-color: rgba(255, 255, 255, .9);
}

.textbackground-dark {
    color: #fff;
    background-color: rgba(0, 0, 0, .85);
}

.textbackground-blue {
    color: #fff;
    background-color: #4f88a6d9;
}

.textbackground-yellow {
    color: #fff;
    background-color: #fbd793d9;
}

.light-link, .dark-link {
    a {
        font-weight: 400;
        border-radius: 0.25rem;
        margin: 0;
        padding: .375rem 2.75rem;
        border: 1px solid transparent;
        background: transparent none;
        text-align: center;
        white-space: nowrap;
        vertical-align: middle;
        display: inline;
        font-size: 1rem;
        line-height: 1.5;
        transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out, -webkit-box-shadow .15s ease-in-out;
    }
}

.light-link {
    a {
        border-color: #f8f9fa;
        color: #f8f9fa;

        &:hover {
            color: #212529;
            background-color: #f8f9fa;
            border-color: #f8f9fa;
        }
    }
}

.dark-link {
    a {
        border-color: #343a40;
        color: #343a40;

        &:hover {
            color: #fff;
            background-color: #343a40;
            border-color: #343a40;
        }
    }
}

.search-menu input#searchsubmit {
    height: 39px;
    padding: 5px 14px;
}

.background-center {
    background-position: center;
}

.background-top {
    background-position: top;
}

.background-bottom {
    background-position: bottom;
}

.height-fix{
    height: -webkit-fill-available;
}

.whitetext {
    color: #fff;
}

.italic {
    font-style: italic;
}

blockquote {
    font-family: myriad-pro, sans-serif;
    font-style: normal;
}

iframe {
    border: none;
}

.fullheight {
    height: stretch;
}

.orangerubrik {
    display: flex;
    justify-content: flex-start;
    width: 100%;
    color: #fff;
    font-size: 1.8rem;
    text-transform: uppercase;
    margin-bottom: 1.8rem;

    &.left {
        justify-content: flex-start;
    }

    &.middle {
        justify-content: center;
    }

    &.right {
        justify-content: flex-end;
    }

    .wpb_wrapper {
        max-width: fit-content;
        background: $easit-yellow;
        padding: 0 1rem;
    }
}

.displayarea {
    background-position: center;
}

.fixedback {
    background-attachment: fixed;
}

#stickyheader {
    width: 100%;
    height: 50px;
    display: block;
    position: absolute;
    display: block;
    z-index: 1;

    .img-fluid {
        width: auto;
        height: 30px;
    }
}

#stickyalias {
    display: none;
    height: 10px;
}

#unstickyheader {
    margin-bottom: 15px;
}

#othercontent {
    margin-top: 20px;
}

.btn {
    padding: .375rem 2.75rem;
}

.h1,
h1 {
    font-size: 3.5em;
}

.h2,
h2 {
    font-size: 2.5em;
}

.h3,
h3 {
    font-size: 1.5em;
}

a {
    color: #000;
}

.header a {
    color: #fff;
}

a:hover {
    color: #4f88a6;
    text-decoration: none;
}

.imageradius {
    border-radius: 8px;
}

.section-description {
    color: #9096a4;
    margin-top: 16px;
    margin-bottom: 16px;
    font-size: 16px;
    line-height: 28px;
    max-width: 600px;
    margin: 0 auto;
}

.label {
    color: #000;
}

.omosstext .section-description {
    color: #ccc;
}
/* ... */

